# xontrib-conda-project

./: .gitignore  LICENSE  README.md  pyproject.toml
xontrib_conda_project/: __init__.py  conda_project.xsh
