[tool.poetry]
name = "xontrib-conda-project"
version = "0.1.0"
description = "Automatically activate conda environments when switching projects"
authors = ["Dominic Ward <dom@deeuu.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
xonsh = "^0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
